[tool.poetry]
name = "dino"
version = "0.1.0"
description = ""
authors = ["LourencoVazPato <lourenco.pato@cleverly.ai>"]

[tool.poetry.dependencies]
python = ">=3.8"
torch = "^1.11.0"
torchvision = "^0.12.0"
pytorch-lightning = "^1.6.0"
lightning-bolts = "^0.5.0"
vit-pytorch = "^0.33.2"
scipy = "1.6.0"
mlflow = "^1.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mypy = "^0.942"
flake8 = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
